# Capstone-2

./: .dockerignore  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DELIVERY_SUMMARY.md  Dockerfile  LICENSE  QUICK_START.md  README.md  STREAMLIT_SETUP.md  SYSTEM_COMPLETION_REPORT.md  Soil Nutrients.csv  main.ipynb  pyproject.toml  requirements.txt  run_pipeline.py  setup_streamlit.py  start.sh  start_streamlit.sh  streamlit_app.py
cropsense-ui/: index.html  package-lock.json  package.json  vite.config.js
cropsense-ui/src/: App.jsx  api.js  i18n.jsx  index.css  main.jsx
cropsense-ui/src/components/: RecommendationPanel.jsx  ui.jsx
cropsense-ui/src/pages/: About.jsx  Analysis.jsx  Batch.jsx  Dashboard.jsx  Optimize.jsx  Predict.jsx
models/: crop_classifier.pkl  feature_importance_crop.csv  feature_importance_yield.csv  knn_model.pkl  label_encoder.pkl  metadata.json  scaler.pkl  yield_regressor.pkl
models/metrics/: classifier_experiments.csv  regressor_experiments.csv  training_summary.json
src/: __init__.py  api.py  logger.py  predict.py  preprocessing.py  recommender.py  train.py
tests/: test_smoke.py
